@@ -1,4 +1,6 @@
 Verion 0.9.44dev (?? ??? 2004)
+  - Fixed bug 892081: Don't allow users to use work hours with end hour
+    before start hour (in admin and pref).
   - Fixed bug 858560: Allow adding events more than four years in the future.
   - Fixed bug: Do not list Public Access in assistant_edit.php.
   - Added back "Assistants" link in trailer that was accidentally removed.
